libs/toolkit-macros-tests/tests/ui/fail/missing_name.rs
use toolkit_macros::gear;

#[gear(capabilities=[stateful])]
pub struct X;

fn main() {}
