libs/toolkit-macros-tests/tests/ui/fail/missing_name.stderr
error: name parameter is required, e.g. #[gear(name = "my-gear", ...)]
 --> tests/ui/fail/missing_name.rs:3:1
  |
3 | #[gear(capabilities=[stateful])]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `gear` (in Nightly builds, run with -Z macro-backtrace for more info)
